Travel::Status::DE::IRIS 1.33 - Sat Oct 05 2019

    * Fix $result->route_pre / route_post accessors providing bogus data
      when all previous/following stops are cancelled. They used to return
      sched_route_pre / sched_route_post instead of an empty list in this case.

Travel::Status::DE::IRIS 1.32 - Thu Aug 22 2019

    * Travel::Status::DE::IRIS::Stations: Add geocoordinates fo some swiss
      and austrian stations

Travel::Status::DE::IRIS 1.31 - Thu Aug 08 2019

    * Travel::Status::DE::IRIS::Stations: Add EVA/UIC station numbers and use
      full names for non-german stations.

Travel::Status::DE::IRIS 1.30 - Wed Jul 17 2019

    * Result: Add ->station and ->station_uic accessors. These are useful to
      determine which station an individual train belongs to when requesting
      departures of multiple stations at once using the "with_related" option.

Travel::Status::DE::IRIS 1.29 - Tue Jul 09 2019

    * Add QoS code 72 (no info/entertainment system available)
    * Fix erroneous QoS codes 83, 91, 92

Travel::Status::DE::IRIS 1.28 - Sun Jun 23 2019

    * Add 234 stations missing from regular DB Open Data station list
    * Add delay code 14 (Technische Störung am Bahnhof)

Travel::Status::DE::IRIS 1.27 - Wed Jun 05 2019

    * Add station Berlin Zoologischer Garten (S)

Travel::Status::DE::IRIS 1.26 - Fri May 31 2019

    * Fix DS100 code for Berlin Westkreuz
    * Add station Bonn UN Campus

Travel::Status::DE::IRIS 1.25 - Mon Apr 29 2019

    * Do not ignore trains with arrival < lookahead, even if departure >=
      lookahead.
    * Add delay code 66 (flooded area)

Travel::Status::DE::IRIS 1.24 - Sat Mar 02 2019

    * Remove erroneous double entry for Düsseldorf-Bilk
    * Fix a warning when encountering unusual train types

Travel::Status::DE::IRIS 1.23 - Sat Dec 29 2018

    * Ignore apparently useless "ZOB" (central omnibus station) links at most
      main stations. This decreases the average runtime and also fixes