@@ -1,3 +1,10 @@
+Travel::Status::DE::IRIS 1.34 - Sat Oct 19 2019
+
+    * Improve request speed when using with_related by ignoring
+      subway stations which do not have results anyways (e.g. in Hannover Hbf)
+    * Do not forward unexpected IRIS message codes (ID ≥ 100) to the user
+    * IRIS: Add ->related_stations accessor
+
 Travel::Status::DE::IRIS 1.33 - Sat Oct 05 2019
 
     * Fix $result->route_pre / route_post accessors providing bogus data
